--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment variables (NEVER commit these!)
+.env
+.env.local
+.env.*.local
+
+# Firebase
+.firebase/
+serviceAccountKey.json
